<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/characterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/character_name"
        android:textStyle="bold"
        android:textSize="20sp"
    />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/characterImage"
        android:layout_width="0dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/baseline_error_outline_24"
        app:layout_constraintTop_toBottomOf="@id/characterName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/characterContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/characterImage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="25dp"
        >
        <TextView
            android:id="@+id/characterDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/character_description"
            />

        <TextView
            android:id="@+id/numberOfComics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number_of_comics"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/numberOfSeries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number_of_series"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/linkToComicsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/external_link_to_comics"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:id="@+id/linkToComics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/link_to_comics"
            android:layout_marginTop="10dp"
            android:autoLink="web"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>